--- a/catalogs.html
+++ b/catalogs.html
@@ -1182,6 +1182,182 @@
                             </div>
                         </div>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-2">Sədəf</button>
+                        </h2>
+                        <div id="catalog-collapse-2" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-3">Kristal</button>
+                        </h2>
+                        <div id="catalog-collapse-3" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-4">Sobrano Veneziano</button>
+                        </h2>
+                        <div id="catalog-collapse-4" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-5">Sobrano Travertion</button>
+                        </h2>
+                        <div id="catalog-collapse-5" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-6">Mineral Sıva</button>
+                        </h2>
+                        <div id="catalog-collapse-6" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-7">Sellülozik Parlaq Boya</button>
+                        </h2>
+                        <div id="catalog-collapse-7" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-8">Mobitex</button>
+                        </h2>
+                        <div id="catalog-collapse-8" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-9">Sintetik Boya</button>
+                        </h2>
+                        <div id="catalog-collapse-9" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-10">Rulotex</button>
+                        </h2>
+                        <div id="catalog-collapse-10" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-11">Hammerton</button>
+                        </h2>
+                        <div id="catalog-collapse-11" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#catalog-collapse-12">Universal Rəng Pastası</button>
+                        </h2>
+                        <div id="catalog-collapse-12" class="accordion-collapse collapse" data-bs-parent="catalogs-accordion">
+                            <div class="accordion-body">
+                                <p class="notice">
+                                    <b>Qeyd:</b>Ekrandakı kataloq rəngləri monitor, planşet, noutbuk və smartfonların ekran 
+                                    kalibrasiya fərqlərinə və işığın düşməsinə görə tətbiq olunacaq orijinal rənglərindən fərqli 
+                                    görünə bilər. Dəqiq nəticə üçün rəng kataloqumuza ən yaxın satış ünvanlarında baxa bilərsiniz. 
+                                    Həmçinin seçdiyiniz rəngi tətbiq edərkən, boyanın rəngi otağa təbii günəş işığının düşməsinə, 
+                                    istifadə etdiyiniz aydınlatma cihazlarının lampa rənginə (məs: sarı, led və s.) görə də fərqli görünə bilər.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>    
