--- a/restore-password.html
+++ b/restore-password.html
@@ -513,7 +513,7 @@
                     <div class="col-12 col-lg-6 col-center">
                         <div class="contact-right">
                             <div class="item">
-                                <a href="index.html" class="logo"><img src="../image/logo/sobsan-white-logo.svg"></a>
+                                <a href="index.html" class="logo"><img src="image/logo/sobsan-white-logo.svg"></a>
                             </div>
                             <div class="sosial-icons">
                                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
