--- a/career.html
+++ b/career.html
@@ -509,7 +509,7 @@
                                 <div class="vacancy-card">
                                     <span class="header">Dizayner</span>
                                     <p class="text"><b>"Qrafik dizayn"</b> sayəsində bilik və bacarıqlarını bizimlə təkmilləşdirmək istəyən, yeniliklərə həvəsli, fərqli düşüncə və ideyalara sahib gəncləri komandamıza dəvət edirik!</p>
-                                    <a href="career-page.html" class="vacancy-button">Daha ətraflı <i class="fa-solid fa-arrow-right-long"></i></a>
+                                    <a href="vacancy-page.html" class="vacancy-button">Daha ətraflı <i class="fa-solid fa-arrow-right-long"></i></a>
                                 </div>
                             </div>
                         </div>
