--- a/product-basket.html
+++ b/product-basket.html
@@ -487,7 +487,7 @@
         </div>
     </header>
 
-    <main class="sobsan-actions">
+    <main class="sobsan-basket">
         <div class="page-heading container">
             <div class="root-links">
                 <a href="#">Əsas səhifə</a>
