--- a/gallery.html
+++ b/gallery.html
@@ -487,7 +487,7 @@
         </div>
     </header>
 
-    <main class="sobsan-about">
+    <main class="sobsan-gallery">
         <div class="page-heading container">
             <div class="root-links">
                 <a href="#">Əsas səhifə</a>
