--- a/service-network.html
+++ b/service-network.html
@@ -487,7 +487,7 @@
         </div>
     </header>
 
-    <main class="sobsan-actions">
+    <main class="sobsan-service-network">
         <div class="page-heading container">
             <div class="root-links">
                 <a href="#">Əsas səhifə</a>
