--- a/warranty-terms.html
+++ b/warranty-terms.html
@@ -487,7 +487,7 @@
         </div>
     </header>
 
-    <main class="sobsan-payment-delivery">
+    <main class="sobsan-warranty-terms">
         <div class="page-heading container">
             <div class="root-links">
                 <a href="#">Əsas səhifə</a>
