--- a/career.html
+++ b/career.html
@@ -516,42 +516,34 @@
                     </div>
                 </div>
                 <div class="career-wrapper d-none">
-                    <form action="#" autocomplete="off" class="vacancy-form">
+                    <form action="#" autocomplete="off" class="form-general">
                         <div class="row w-100">
                             <div class="col-12 col-md-6 col-center">
-                                <div class="form-item">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="user-firstname" placeholder="ad">
-                                        <label for="user-firstname">Ad *</label>
-                                    </div>
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="user-firstname" placeholder="ad">
+                                    <label for="user-firstname">Ad *</label>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-center">
-                                <div class="form-item">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="user-lastname" placeholder="soyad">
-                                        <label for="user-lastname">Soyad *</label>
-                                    </div>
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="user-lastname" placeholder="soyad">
+                                    <label for="user-lastname">Soyad *</label>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-center">
-                                <div class="form-item">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="user-email" placeholder="email">
-                                        <label for="user-email">E-poçt *</label>
-                                    </div>
+                                <div class="form-floating">
+                                    <input type="email" class="form-control" id="user-email" placeholder="email">
+                                    <label for="user-email">E-poçt *</label>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-center">
-                                <div class="form-item">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="user-phone" placeholder="nomre">
-                                        <label for="user-phone">Telefon *</label>
-                                    </div>
+                                <div class="form-floating">
+                                    <input type="text" class="form-control" id="user-phone" placeholder="nomre">
+                                    <label for="user-phone">Telefon *</label>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-center">
-                                <div class="form-item file">
+                                <div class="input-file">
                                     <input type="file" class="form-control" id="user-cv" accept="application/pdf, application/msword">
                                     <label for="user-cv">
                                         <span>CV *</span>
@@ -560,22 +552,18 @@
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-center">
-                                <div class="form-item select">
-                                    <div class="form-floating">
-                                        <select class="form-select form-control" id="user-job">
-                                          <option disabled selected></option>
-                                          <option>Dizayner</option>
-                                        </select>
-                                        <label for="user-job">Müraciət etmək istədiyiniz vəzifə</label>
-                                    </div>
+                                <div class="form-floating">
+                                    <select class="form-select" id="user-job">
+                                      <option disabled selected></option>
+                                      <option>Dizayner</option>
+                                    </select>
+                                    <label for="user-job">Müraciət etmək istədiyiniz vəzifə</label>
                                 </div>
                             </div>
                             <div class="col-12 col-center">
-                                <div class="form-item textarea">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="qeyd" id="user-notice"></textarea>
-                                        <label for="user-notice">Əlavə qeydləriniz</label>
-                                    </div>
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="qeyd" id="user-notice"></textarea>
+                                    <label for="user-notice">Əlavə qeydləriniz</label>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -716,20 +704,6 @@
             careerButtons[1].classList.add("active");
             careerWrapper[1].classList.remove("d-none");
         });
-    </script>
-    <script>
-        let formControl = document.querySelectorAll(".form-control");
-        let formItem = document.querySelectorAll(".form-item");
-        for(let i = 0; i < formControl.length; i++){
-            (function(index){
-                formControl[i].addEventListener("focus",function(){
-                    formItem[index].classList.add("red-border")
-                });
-                formControl[i].addEventListener("blur",function(){
-                    formItem[index].classList.remove("red-border")
-                });
-            })(i);
-        }
     </script>
     
 </body>
