--- a/login.html
+++ b/login.html
@@ -500,18 +500,14 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12 col-lg-6 col-center">
-                        <form action="#" autocomplete="off">
-                            <div class="form-item">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="user-email" placeholder="email">
-                                    <label for="user-email">E-poçt *</label>
-                                </div>
+                        <form action="#" autocomplete="off" class="form-general">
+                            <div class="form-floating">
+                                <input type="email" class="form-control" id="user-email" placeholder="email">
+                                <label for="user-email">E-poçt *</label>
                             </div>
-                            <div class="form-item">
-                                <div class="form-floating">
-                                    <input type="password" class="form-control" id="user-password" placeholder="sifre">
-                                    <label for="user-password">Şifrə *</label>
-                                </div>
+                            <div class="form-floating">
+                                <input type="password" class="form-control" id="user-password" placeholder="sifre">
+                                <label for="user-password">Şifrə *</label>
                             </div>
                             <a href="restore-password.html" class="restore-password">Şifrəmi unutdum</a>
                             <button type="submit" class="form-button red">Giriş</button>
@@ -648,19 +644,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        let formControl = document.querySelectorAll(".form-control");
-        let formItem = document.querySelectorAll(".form-item");
-        for(let i = 0; i < formControl.length; i++){
-            (function(index){
-                formControl[i].addEventListener("focus",function(){
-                    formItem[index].classList.add("red-border")
-                });
-                formControl[i].addEventListener("blur",function(){
-                    formItem[index].classList.remove("red-border")
-                });
-            })(i);
-        }
-    </script>
 </body>
 </html>
